--- a/javastudy/src/main/resources/static/bower.json
+++ b/javastudy/src/main/resources/static/bower.json
@@ -12,6 +12,7 @@
   	"bootstrap": "4.1.3",
   	"jquery":"3.2.1",
   	"vue":"2.5.17",
-  	"axios":"0.18.0"
+  	"axios":"0.18.0",
+  	"jquery-cookie": "1.4.1"
 }
 }
